package fr.epita.bank.datamodel;

public class SavingsAccount extends Account {
	private double interrestRate;

}
