package fr.epita.bank.datamodel;

public class Stock {
	private double unitPrice;
	private String name;
}
