package fr.epita.bank.datamodel;

public class StockOrder {
	private double unitPrice;
	private int quantity;
	private double commission;

	private Stock stock;
	private InvestmentAccount account;

}
